Add Jest testing framework and update tsconfig.json and eslint configurations
This commit introduces Jest as the testing framework into the project, installs new testing-related dependencies and adjusts tsconfig and ESLint configurations to accommodate these changes. Additionally, a new test for a container component has been added. The configurations updates improve the flexibility of the project to accommodate better testing practices.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es2021": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": [
     "standard-with-typescript",
@@ -18,7 +19,9 @@
   ],
   "ignorePatterns": [
     "next.config.js",
-    "postcss.config.js"
+    "postcss.config.js",
+    "jest.config.js",
+    "jest.setup.js"
   ],
   "rules": {
   }
